--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,7 @@
-{deps, []}.
+{deps, [
+    {brod, {git,"https://github.com/klarna/brod.git",{tag,"3.8.1"}}},
+	{jsx, {git, "https://github.com/talentdeficit/jsx.git", {tag, "v2.10.0"}}}
+]}.
 
 {profiles,
  [{test,
