--- a/etc/emqx_plugin_kafka.conf
+++ b/etc/emqx_plugin_kafka.conf
@@ -1,29 +1,34 @@
 ##--------------------------------------------------------------------
-## kafka plugin config
+## kafka Bridge
 ##--------------------------------------------------------------------
 
-event.kafka.host = localhost
+## The Kafka loadbalancer node host that bridge is listening on.
+##
+## Value: 127.0.0.1, localhost
+kafka.host = localhost
 
-event.kafka.port = 9092
+## The kafka loadbalancer node port that bridge is listening on.
+##
+## Value: Port
+kafka.port = 9092
 
-event.kafka.partition_total = 1
+## The kafka loadbalancer node partition strategy.
+##
+## Value: random, sticky_round_robin, strict_round_robin, custom
+kafka.partitionstrategy = random
 
-event.kafka.topic = roobo_device_event
+## Each worker represents a connection to a broker + topic + partition combination.
+## You can decide how many workers to start for each partition.
+##
+## Value: 
+kafka.partitionworkers = 2
 
+## payload topic.
+##
+## Value: string
+kafka.payloadtopic = Payload
 
-custom.kafka.host = localhost
-
-custom.kafka.port = 9092
-
-custom.kafka.partition_total = 1
-
-custom.kafka.topic = roobo_device_event
-
-
-online.kafka.host = localhost
-
-online.kafka.port = 9092
-
-online.kafka.partition_total = 1
-
-online.kafka.topic = roobo_device_online
+## event topic.
+##
+## Value: string
+kafka.eventtopic = Event
