--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,6 @@
 {deps, [
-    {brod, {git,"https://github.com/klarna/brod.git",{tag,"3.8.1"}}},
-	  {jsx, {git, "https://github.com/talentdeficit/jsx.git", {tag, "v210.0"}}},
-    {ekaf, {git,"https://github.com/helpshift/ekaf", {tag, "master"}}}
+    {brod, {git,"https://github.com/klarna/brod.git",{branch,"master"}}},
+	  {jsx, {git, "https://github.com/talentdeficit/jsx.git", {tag, "v210.0"}}}
 ]}.
 
 {profiles,
