--- a/etc/emqx_plugin_kafka.conf
+++ b/etc/emqx_plugin_kafka.conf
@@ -9,3 +9,13 @@ event.kafka.port = 9092
 event.kafka.partition_total = 1
 
 event.kafka.topic = sample_topic
+
+event.kafka.username=client
+
+event.kafka.password=client-secret
+
+event.kafka.cacertfile=ca.crt
+
+event.kafka.certfile=cert.pem
+
+event.kafka.keyfile=key.key
